--- a/arcadegame.html
+++ b/arcadegame.html
@@ -43,8 +43,8 @@
     </div>
 
     <!-- all javascript -->
-    <script src="resources1.js"></script>
-    <script src="arcadeapp1.js"></script>
-    <script src="engine1.js"></script>
+    <script src="arcadejs/resources1.js"></script>
+    <script src="arcadejs/arcadeapp1.js"></script>
+    <script src="arcadejs/engine1.js"></script>
 </body>
 </html>
